[gd_scene load_steps=2 format=3 uid="uid://doaqvupbr68d8"]

[ext_resource type="Script" path="res://scripts/ui/store.gd" id="1_g5qnm"]

[node name="root" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g5qnm")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)

[node name="StoreContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HeaderMargin" type="MarginContainer" parent="StoreContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="Header" type="HBoxContainer" parent="StoreContainer/HeaderMargin"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StoreIcon" type="TextureRect" parent="StoreContainer/HeaderMargin/Header"]
layout_mode = 2
size_flags_vertical = 4
expand_mode = 1

[node name="StoreLogo" type="ColorRect" parent="StoreContainer/HeaderMargin/Header"]
layout_mode = 2
size_flags_vertical = 4
color = Color(0, 0, 0, 1)

[node name="CoinDisplay" type="HBoxContainer" parent="StoreContainer/HeaderMargin/Header"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4

[node name="CoinIcon" type="TextureRect" parent="StoreContainer/HeaderMargin/Header/CoinDisplay"]
layout_mode = 2
expand_mode = 1

[node name="CoinAmount" type="ColorRect" parent="StoreContainer/HeaderMargin/Header/CoinDisplay"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="CategoryMargin" type="MarginContainer" parent="StoreContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="Categories" type="HBoxContainer" parent="StoreContainer/CategoryMargin"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Category1" type="Button" parent="StoreContainer/CategoryMargin/Categories"]
layout_mode = 2
flat = true

[node name="CategoryIcon1" type="ColorRect" parent="StoreContainer/CategoryMargin/Categories/Category1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Category2" type="Button" parent="StoreContainer/CategoryMargin/Categories"]
layout_mode = 2
flat = true

[node name="CategoryIcon2" type="ColorRect" parent="StoreContainer/CategoryMargin/Categories/Category2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Category3" type="Button" parent="StoreContainer/CategoryMargin/Categories"]
layout_mode = 2
flat = true

[node name="CategoryIcon3" type="ColorRect" parent="StoreContainer/CategoryMargin/Categories/Category3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ItemsMargin" type="MarginContainer" parent="StoreContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ItemGrid" type="GridContainer" parent="StoreContainer/ItemsMargin"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 3

[node name="StoreItem1" type="Panel" parent="StoreContainer/ItemsMargin/ItemGrid"]
layout_mode = 2

[node name="ItemIcon" type="ColorRect" parent="StoreContainer/ItemsMargin/ItemGrid/StoreItem1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -70.0
offset_right = 60.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="PriceContainer" type="HBoxContainer" parent="StoreContainer/ItemsMargin/ItemGrid/StoreItem1"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -40.0
offset_right = 60.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="CoinIcon" type="TextureRect" parent="StoreContainer/ItemsMargin/ItemGrid/StoreItem1/PriceContainer"]
layout_mode = 2
expand_mode = 1

[node name="Price" type="ColorRect" parent="StoreContainer/ItemsMargin/ItemGrid/StoreItem1/PriceContainer"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="BuyButton" type="Button" parent="StoreContainer/ItemsMargin/ItemGrid/StoreItem1"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -15.0
offset_right = 50.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
icon_alignment = 1

[node name="StoreItem2" type="Panel" parent="StoreContainer/ItemsMargin/ItemGrid"]
layout_mode = 2

[node name="ItemIcon" type="ColorRect" parent="StoreContainer/ItemsMargin/ItemGrid/StoreItem2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -70.0
offset_right = 60.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="PriceContainer" type="HBoxContainer" parent="StoreContainer/ItemsMargin/ItemGrid/StoreItem2"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -40.0
offset_right = 60.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="CoinIcon" type="TextureRect" parent="StoreContainer/ItemsMargin/ItemGrid/StoreItem2/PriceContainer"]
layout_mode = 2
expand_mode = 1

[node name="Price" type="ColorRect" parent="StoreContainer/ItemsMargin/ItemGrid/StoreItem2/PriceContainer"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="StoreItem3" type="Panel" parent="StoreContainer/ItemsMargin/ItemGrid"]
layout_mode = 2

[node name="ItemIcon" type="ColorRect" parent="StoreContainer/ItemsMargin/ItemGrid/StoreItem3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -70.0
offset_right = 60.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="PriceContainer" type="HBoxContainer" parent="StoreContainer/ItemsMargin/ItemGrid/StoreItem3"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -40.0
offset_right = 60.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="CoinIcon" type="TextureRect" parent="StoreContainer/ItemsMargin/ItemGrid/StoreItem3/PriceContainer"]
layout_mode = 2
expand_mode = 1

[node name="Price" type="ColorRect" parent="StoreContainer/ItemsMargin/ItemGrid/StoreItem3/PriceContainer"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="FooterMargin" type="MarginContainer" parent="StoreContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Footer" type="HBoxContainer" parent="StoreContainer/FooterMargin"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="BackButton" type="Button" parent="StoreContainer/FooterMargin/Footer"]
layout_mode = 2
icon_alignment = 1

[node name="BackIcon" type="ColorRect" parent="StoreContainer/FooterMargin/Footer/BackButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -15.0
offset_right = 50.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
